# libsimsage

./: api-docs-7.11.4.json  api-docs-7.12.19.json  api-docs-7.13.31.json  api-docs-7.14.12.json  generate-csharp.sh  generate-docs.sh  generate-java.sh  generate-kotlin.sh  generate-php.sh  generate-python.sh  generate-rust.sh  generate-rxjs.sh  instructions.txt
libsimsage-7.11.4/python/: README.md  pyproject.toml
libsimsage-7.11.4/python/.openapi-generator/: FILES
libsimsage-7.11.4/python/docs/: AuthApi.md  Backup.md  CMCategorizationPaginatedList.md  CMChangeTaskPhase.md  CMClaimDocument.md  CMCommandQueueItem.md  CMCommentFilter.md  CMCreateGdprProject.md  CMDParagraphSummary.md  CMDeleteProjectCmd.md  CMDocumentAcl.md  CMDocumentBookmark.md  CMDocumentLock.md  CMDocumentNote.md  CMDocumentRelationship.md  CMDocumentSubscription.md  CMExternalCrawlerStart.md  CMFilter.md  CMImportUsers.md  CMKeyedSearchTerm.md  CMKnowledgeBaseExport.md  CMLocatedRedaction.md  CMNewComment.md  CMNextDocument.md  CMOptimizeIndex.md  CMPagedResultsCMSlicedDocument.md  CMParquetTimeList.md  CMProjectDefinition.md  CMProjectDefinitionTask.md  CMProjectFrame.md  CMProjectInfo.md  CMProjectSlice.md  CMProjectSliceTask.md  CMQueryFocussedSummarizationRequest.md  CMQueryToken.md  CMQueueFilter.md  CMQueueItem.md  CMReassignSliceDocument.md  CMRedactionDetails.md  CMResultsSection.md  (+53 more)
libsimsage-7.11.4/python/openapi_client/: api_client.py  rest.py
libsimsage-7.11.4/python/test/: test_cm_add_folder.py  test_cm_claim_document.py  test_cm_crawler_status.py  test_cm_created_project.py  (+101 more)
(+4730 files in other folders)
